Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx

5.372 Wed Feb 23 06:14:30 CET 2011
	- apparently mingw doesn't provide a working gettimeofday, try to
          work around that by relying on Time::HiRes (indirectly brought to
          my attention by Max Maischein).
        - fix some portability issues when Time::HiRes was used.

5.371 Mon Feb 21 14:36:08 CET 2011
	- backport to windows process emulation code again.

5.37  Sat Feb 19 07:49:44 CET 2011
	- add a big "Coro thread life cycle" section to "man Coro".
	- try a tentative workaround against the breakage that 5.13 has
          introduced without depreciation period. sigh.
        - no longer use Time::HiRes if gettimeofday is available, which
          saves quite a lot of memory.

5.36  Sun Feb 13 05:33:41 CET 2011
	- automatically load Coro::Channel, Coro::RWLock, Coro::Semaphore,
          Coro::SemaphoreSet, Coro::Signal and Coro::Specific on first "new"
          method call.
        - undocument Coro::Timer::sleep and obsolete whole module.
        - optimise Coro::Timer::timeout memory and cpu usage.
        - slightly updated Coro::Intro for recent changes.
        - do not initialise PL_dirty anymore.

5.25  Thu Nov 11 01:08:39 CET 2010
	- try a different approach on netbsd - netbsd 5 finally has marginally
          working pthreads, but still broken ucontext/sigaltstack.
        - openbsd 4.8 finally got their act together, Coro works out of the box
          with asm, setjmp and pthreads (no change, just informational).

5.24  Sat Oct 23 11:27:12 CEST 2010
	- port to the EV 4.0 API.
	- work around bugs in mingw32, making strawberry perl work
          out of the box.
	- correctly modify Coro::AIO function prototypes
          so that they reflect the "no optional parameters" rule.
	- "ported" libcoro to C++.

5.23  Mon May 17 18:50:42 CEST 2010