@@ -4,6 +4,9 @@ TODO: should explore PerlIO::coroaio (perl leaks like hell).
 TODO: channel->maxsize(newsize)?
 TODO: http://www.microsoft.com/msj/archive/s2ce.aspx
 
+	- be a bit more crash-resistant when calling (buggy) on_destroy
+          callbacks (bets effort).
+
 5.372 Wed Feb 23 06:14:30 CET 2011
 	- apparently mingw doesn't provide a working gettimeofday, try to
           work around that by relying on Time::HiRes (indirectly brought to
